Designed homepage and added controllers for pages